force-app/main/default/objects/Onboarding_Activity__c/Onboarding_Activity__c.object-meta.xml
<CustomObject>
    <label>Onboarding Activity</label>
    <nameField>
        <label>Onboarding Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>