force-app/main/default/objects/Onboarding_Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aloha</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Org62</fullName>
            </value>
            <value>
                <fullName>Quip</fullName>
            </value>
            <value>
                <fullName>Services Org</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Slides</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
            <value>
                <fullName>Trailblazer</fullName>
            </value>
            <value>
                <fullName>VolunteerFx</fullName>
            </value>
            <value>
                <fullName>Webassessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>