force-app/main/default/objects/Onboarding_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Duration__c</columns>
    <columns>Onboarding__c</columns>
    <columns>Type__c</columns>
    <columns>URL__c</columns>
    <columns>Trailhead_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>